--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,22 @@ body {
     color: #d9dcd6;
 }
 
+.column-img{
+    width: 45%;
+    border: 15px solid green;
+    padding: 50px;
+    margin: 20px;
+    float: left;
+    justify-content: space-between;
+}
+
+.column-middle{
+    width: 30%;
+    border: 15px solid green;
+    padding: 50px;
+    margin: 20px;
+
+}
 
 footer{
 margin-top: 10px;
@@ -49,7 +65,6 @@ text-align: center;
     border: 15px solid green;
     padding: 50px;
     margin: 20px;
-background-color: grey;
 }
 
 .column {
